k8s/team/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-dashboard
  template:
    metadata:
      labels:
        app: analytics-dashboard
    spec:
      containers:
        - name: analytics-dashboard
          image: swr.eu-de.otc.t-systems.com/anybill/analytics-dashboard:sha-0f3c78db
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: 300Mi
              cpu: 50m
            limits:
              memory: 300Mi
              cpu: 300m
      imagePullSecrets:
        - name: otcswr
